# langchain-lecl

./: .gitignore  pyproject.toml
notebooks/: langchain_rag.ipynb  prototype.ipynb
src/: main.py
src/tools/: web_search_tool.py
